--- a/assets/css/default/nav.css
+++ b/assets/css/default/nav.css
@@ -114,7 +114,7 @@
     .hamburger-btn { display: block; }
     .logo-container { flex-direction: row; justify-content: flex-start; gap: 16px; margin: 0px; }
     
-    .main-nav {
+    .main-nav { width: 100%;
       position: fixed; top: 0; right: 0 !important; bottom: 0; left: auto !important; 
       transform: translateX(100%); transition: transform .3s ease; will-change: transform;
       overflow-y: auto; overscroll-behavior: contain; -webkit-overflow-scrolling: touch; pointer-events: none;
