--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -93,6 +93,7 @@
     document.write('<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/default/nav.css?v=' + APP_VERSION + '">');
     document.write('<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/default/version-update.css?v=' + APP_VERSION + '">');
     document.write('<script src="{{ site.baseurl }}/assets/js/language-router.js?v=' + APP_VERSION + '"><\/script>');
+    // document.write('<script src="{{ site.baseurl }}/assets/js/i18n-utils.js?v=' + APP_VERSION + '"><\/script>');
     document.write('<script src="{{ site.baseurl }}/assets/js/nav.js?v=' + APP_VERSION + '"><\/script>');
     document.write('<script src="{{ site.baseurl }}/assets/js/top_button.js?v=' + APP_VERSION + '"><\/script>');
     
