--- a/assets/css/defense-calc.css
+++ b/assets/css/defense-calc.css
@@ -263,6 +263,9 @@ select:-moz-focusring { color: transparent; text-shadow: 0 0 0 rgb(255, 255, 255
     .note-column:empty { display: none; }
     
 
+    .group-header-cell {height: 36px !important;}
+    .group-header-inner {padding: 0px !important;}
+
     /* 체크박스 이미지 크기 */
     img[src*="check-off.png"],
     img[src*="check-on.png"] { width: 20px !important; height: 20px !important; }
