--- a/assets/css/defense-calc.css
+++ b/assets/css/defense-calc.css
@@ -7,7 +7,8 @@ input[type="checkbox"]:hover { opacity: 0.8; }
 /* 상단 카드 컨테이너 */
 .top-cards { display: grid; grid-template-columns: 1fr; gap: 20px; margin-bottom: 20px; padding: 0px 20px 0px 20px; }
 
-.stat-card, .boss-card, .damage-card, .defense-coef-card { padding: 10px 20px 10px 20px; text-align: left; background-color: #3d3030; border-radius: 10px; }
+.boss-card, .damage-card, .defense-coef-card { padding: 10px 20px 10px 20px; text-align: left; background-color: #4b3c3c; border-radius: 10px; }
+.stat-card { padding: 10px 20px 10px 20px; text-align: left; background-color: #3d3030; border-radius: 10px; }
 
 .top-cards h2 { font-size: 16px; color: rgba(255, 255, 255, 0.8); padding : 10px 0px 10px 0px; margin : 0px; }
 
@@ -116,8 +117,10 @@ input[type="checkbox"]:hover { opacity: 0.8; }
 .skill-icon { width: 24px !important; height: 24px !important; max-width: 24px !important; max-height: 24px !important; object-fit: contain !important; }
 
 
-img[src*="check-off.png"] { width: 20px !important; height: 20px !important; object-fit: contain !important; opacity: 0.6; cursor: pointer; }
-img[src*="check-on.png"] { width: 25px !important; height: 25px !important; object-fit: contain !important; transform: translateX(-1px) translateY(-0.5px); cursor: pointer; }
+@media (min-width: 1200px) {
+    img[src*="check-off.png"] { width: 16px !important; height: 16px !important; object-fit: contain !important; opacity: 0.6; cursor: pointer; }
+    img[src*="check-on.png"] { width: 20px !important; height: 20px !important; object-fit: contain !important; transform: translateX(-1px) translateY(-0.5px); cursor: pointer; }   
+}
 
 .option-column select { font-size: 12px; background-color: rgb(0, 0, 0, 0.1); color: rgb(255, 255, 255, 0.4); border: none; border-radius: 4px; cursor: pointer; width: fit-content; padding: 8px 4px !important; }
 
