--- a/assets/css/default/nav.css
+++ b/assets/css/default/nav.css
@@ -31,8 +31,8 @@
 
 
 
-.logo-container { cursor: pointer; height: 100px; display: flex; flex-direction: column; gap: 10px; align-items: center; justify-content: center; margin: 20px 0 10px 0; padding: 12px 24px; outline: none; user-select: none; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; flex-shrink: 0; }
-.logo-container img[src*="lufel.webp"] { height: 50px; width: auto; filter: grayscale(100%) contrast(1.5); filter: drop-shadow(2px 2px 0px rgba(0, 0, 0, 0.9)); }
+.logo-container { cursor: pointer; display: flex; flex-direction: row; gap: 10px; align-items: center; margin: 20px 0 10px 0; padding: 12px 24px; outline: none; user-select: none; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; flex-shrink: 0; }
+.logo-container img[src*="lufel.webp"] { height: 36px; width: auto; filter: grayscale(100%) contrast(1.5); filter: drop-shadow(2px 2px 0px rgba(0, 0, 0, 0.9)); }
 .logo-container img[src*="lufelnet.png"] { margin-top: 4px; width: 120px; object-fit: contain; filter: drop-shadow(0px 2px 0px rgba(255, 255, 255, 0.9)) invert(1); opacity: 0.9; }
 
 .nav-link { display: flex; align-items: center; gap: 0px; padding: 12px 24px; color: #ffffff; text-decoration: none; transition: all 0.3s ease; position: relative; z-index: 1; width: 100%; box-sizing: border-box; outline: none; -webkit-tap-highlight-color: transparent; }
@@ -44,13 +44,13 @@
 .nav-link.active::after { content: ''; position: absolute; align-items: center; margin-bottom: 4px; right: 16px; width: 32px; height: 32px; background-image: url('/assets/img/nav/select.png'); background-size: contain; background-repeat: no-repeat; background-position: center; }
 
 
-.nav-main-item { display: flex; align-items: center; gap: 0px; padding: 15px 24px; color: #ffffff; text-decoration: none; transition: all 0.3s ease; width: 100%; box-sizing: border-box; cursor: pointer; outline: none; -webkit-tap-highlight-color: transparent; border-top: 1px solid transparent; border-bottom: 1px solid transparent; }
+.nav-main-item { display: flex; align-items: center; gap: 0px; padding: 12px 24px; color: #ffffff; text-decoration: none; transition: all 0.3s ease; width: 100%; box-sizing: border-box; cursor: pointer; outline: none; -webkit-tap-highlight-color: transparent; border-top: 1px solid transparent; border-bottom: 1px solid transparent; }
 .nav-main-item:hover { background-color: rgba(0, 0, 0, 0.2); }
 .nav-main-item img { margin-right: 10px; }
 
 .has-submenu.active .nav-main-item { background-color: rgba(0, 0, 0, 0.3); border-top-color: rgba(255, 255, 255, 0.1); border-bottom-color: rgba(255, 255, 255, 0.1); }
 
-.nav-item { position: flex; flex-direction: column; align-items: center; gap: 0px; padding: 16px 24px; color: #ffffff; text-decoration: none; transition: all 0.3s ease; position: relative; z-index: 1; width: 100%; box-sizing: border-box; }
+.nav-item { position: flex; flex-direction: column; align-items: center; gap: 0px; padding: 12px 24px; color: #ffffff; text-decoration: none; transition: all 0.3s ease; position: relative; z-index: 1; width: 100%; box-sizing: border-box; }
 .nav-item img[src*="defense-calc.png"]{ width: 24px !important; height: 24px !important; padding : 4px; object-fit: contain !important; }
 .nav-item:hover{ background-color: rgba(0, 0, 0, 0.2); }
 
