--- a/assets/css/cha_detail_img.css
+++ b/assets/css/cha_detail_img.css
@@ -137,6 +137,6 @@
 
 .character-images img[src*="카타야마 - 키스킬 릴라.webp"]{ scale: 1.5; position: relative; left: 60px; }
 
-.character-images img[src*="YUI·프리즘.webp"]{ scale: 1.25}
+.character-images img[src*="YUI·스텔라.webp"]{ scale: 1.25}
 
-.character-images img[src*="YUI·프리즘 - 압세데우스.webp"]{ scale: 1.1; }
+.character-images img[src*="YUI·스텔라 - 압세데우스.webp"]{ scale: 1.1; }
