--- a/assets/css/cha_detail_img.css
+++ b/assets/css/cha_detail_img.css
@@ -18,7 +18,7 @@
 .character-images img[src*="이치고.webp"],
 .character-images img[src*="리코·매화.webp"],
 .character-images img[src*="치즈코 - 암펠로스.webp"],
-.character-images img[src*="YUI - 압세데우스.webp"],
+.character-images img[src*="YUI - 압세우데스.webp"],
 .character-images img[src*="레오 - 에리테이아.webp"]{ scale: 1.2; }
 
 .character-images img[src*="하루 - 밀라디.webp"],
@@ -139,4 +139,4 @@
 
 .character-images img[src*="YUI·스텔라.webp"]{ scale: 1.25}
 
-.character-images img[src*="YUI·스텔라 - 압세데우스.webp"]{ scale: 1.1; }
+.character-images img[src*="YUI·스텔라 - 압세우데스.webp"]{ scale: 1.1; }
