--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -14,7 +14,7 @@
 
 .main-wrapper { flex: 1; display: flex; flex-direction: column; align-items: flex-start; }
 
-.main-content { padding: 20px; width: 100%; max-width: 1200px; margin: 0 auto; box-sizing: border-box; }
+.main-content { padding: 0px; background-color: transparent; width: 100%; max-width: 1200px; margin: 0 auto; box-sizing: border-box; }
 
 
 
