--- a/assets/css/cha_detail_img.css
+++ b/assets/css/cha_detail_img.css
@@ -140,3 +140,5 @@
 .character-images img[src*="YUI·스텔라.webp"]{ scale: 1.25}
 
 .character-images img[src*="YUI·스텔라 - 압세우데스.webp"]{ scale: 1.1; }
+
+.character-images img[src*="미츠루 - 펜테실레이아.webp"]{ scale: 1.25; position: relative; bottom: 0px; right: 0px; }
