--- a/assets/css/cha_detail_img.css
+++ b/assets/css/cha_detail_img.css
@@ -60,7 +60,7 @@
 .character-images img[src*="토시야 - 고르귀라.webp"]{ position: relative; scale: 1.1; left: 40px; bottom: 40px; }
 
 
-.character-images img[src*="이케나미.webp"]{ position: relative; top: 10px; scale: 1.15; }
+.character-images img[src*="쇼키.webp"]{ position: relative; top: 10px; scale: 1.15; }
 
 .character-images img[src*="마유미.webp"]{ position: relative; top: 10px; left: 40px; scale: 1.4; }
 
@@ -106,7 +106,7 @@
 
 .character-images img[src*="마나카 - 에우테르페.webp"]{ scale: 1.2; }
 
-.character-images img[src*="이케나미 - 기노.webp"]{ position: relative; bottom: 30px; scale: 1.05; }
+.character-images img[src*="쇼키 - 기노.webp"]{ position: relative; bottom: 30px; scale: 1.05; }
 
 .character-images img[src*="마유미 - 피티스.webp"]{ position: relative; right: 20px; bottom: 20px; scale: 0.95; }
 
